@@ -1,4 +1,4 @@
-# $NetBSD: md.amd64,v 1.119 2011/04/15 18:05:42 elric Exp $
+# $NetBSD: md.amd64,v 1.120 2011/05/09 08:51:08 manu Exp $
 ./dev/lms0					base-obsolete		obsolete
 ./dev/mms0					base-obsolete		obsolete
 ./libexec/ld.elf_so-i386			base-sys-shlib		compat,pic
@@ -183,6 +183,9 @@
 ./usr/lib/i386/libpcap.so.4.0			base-compat-shlib	compat,pic
 ./usr/lib/i386/libpci.so.2			base-compat-shlib	compat,pic
 ./usr/lib/i386/libpci.so.2.0			base-compat-shlib	compat,pic
+./usr/lib/i386/libperfuse.so			base-compat-shlib       compat,pic,perfuse
+./usr/lib/i386/libperfuse.so.0			base-compat-shlib       compat,pic,perfuse
+./usr/lib/i386/libperfuse.so.0.0		base-compat-shlib       compat,pic,perfuse
 ./usr/lib/i386/libposix.so.0			base-compat-shlib	compat,pic
 ./usr/lib/i386/libposix.so.0.1			base-compat-shlib	compat,pic
 ./usr/lib/i386/libprop.so.1			base-compat-shlib	compat,pic
